# certificate-inventory

./: 404.html  README.md  docker-compose.yml  index.html  index.txt
404/: index.html
certificate-manager/: Dockerfile  README.md  (+3 more)
certificate-service/: Cargo.toml  Dockerfile  README.md
certificate-service/migrations/: 20250308000000_create_certificates.sql  20250309000000_add_pem_to_certificates.sql  20250309100000_add_last_updated.sql  20250309150000_add_list_indexes.sql
certificate-service/src/: lib.rs  main.rs
certificate-service/src/adapters/: mod.rs
certificate-service/src/adapters/inputs/http/: certificate_controllers.rs  mod.rs
certificate-service/src/adapters/service_providers/persistence/: mod.rs  postgres_certificate_repository.rs
certificate-service/src/application/: dto.rs  mod.rs
certificate-service/src/application/errors/: application_error.rs
certificate-service/src/application/repositories/: certificate_repository_abstract.rs  mod.rs
certificate-service/src/application/usecases/: get_certificate.rs  get_certificate_metrics.rs  get_certificate_pem.rs  interfaces.rs  list_certificates.rs  mod.rs  save_certificate.rs  save_certificate_from_metadata.rs
certificate-service/src/application/utils/: certificate_parser_impl.rs  mod.rs
certificate-service/src/config/: mod.rs
certificate-service/src/domain/: certificate.rs  certificate_parser.rs  mod.rs
certificate-service/src/infrastructure/: apis.rs  mod.rs  shared.rs
certificate-service/src/tests/: api_tests.rs  expiration_tests.rs  mod.rs  parser_tests.rs  repository_tests.rs
(+30 files in other folders)
