[package]
name = "certificate-service"
version = "0.1.0"
edition = "2021"
description = "Certificate microservice — Clean Architecture + Hexagonal (Axum, SQLx)"
rust-version = "1.75"

[lib]
name = "certificate_service"
path = "src/lib.rs"

[[bin]]
name = "certificate-service"
path = "src/main.rs"

[[bin]]
name = "seed_inventory"
path = "src/bin/seed_inventory.rs"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
mockall = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
x509-parser = "0.16"

# Persistence
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "migrate",
    "chrono",
    "uuid",
] }

[dev-dependencies]
tempfile = "3.10"
tower = "0.5"
